--- a/db-helper/Cargo.toml
+++ b/db-helper/Cargo.toml
@@ -6,7 +6,12 @@ version = "0.0.1"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.68"
+bb8 = "0.8.0"
+bb8-mongodb = "0.2.0"
 bytes = {version = "1.4.0", features = ["serde"]}
+mongodb = "2.4.0"
 serde = {version = "1.0.159", features = ["derive"]}
 serde_bytes = "0.11.9"
 serde_json = "1.0.95"
+tokio = "1.27.0"
