--- a/db-helper/Cargo.toml
+++ b/db-helper/Cargo.toml
@@ -9,9 +9,11 @@ version = "0.0.1"
 async-trait = "0.1.68"
 bb8 = "0.8.0"
 bb8-mongodb = "0.2.0"
+bb8-postgres = "0.8.1"
 bytes = {version = "1.4.0", features = ["serde"]}
 mongodb = "2.4.0"
 serde = {version = "1.0.159", features = ["derive"]}
 serde_bytes = "0.11.9"
 serde_json = "1.0.95"
 tokio = "1.27.0"
+tokio-postgres = "0.7.8"
