--- a/core-server/Cargo.toml
+++ b/core-server/Cargo.toml
@@ -9,3 +9,4 @@ version = "0.1.0"
 actix = {version = "0.13.0"}
 actix-web = "4.3.1"
 actix-web-actors = "4.2.0"
+db-helper = {path = "../db-helper"}
