--- a/db-helper/Cargo.toml
+++ b/db-helper/Cargo.toml
@@ -11,6 +11,7 @@ bb8 = "0.8.0"
 bb8-mongodb = "0.2.0"
 bb8-postgres = "0.8.1"
 bytes = {version = "1.4.0", features = ["serde"]}
+futures = "0.3.27"
 mongodb = "2.4.0"
 serde = {version = "1.0.159", features = ["derive"]}
 serde_bytes = "0.11.9"
