--- a/core-server/Cargo.toml
+++ b/core-server/Cargo.toml
@@ -9,8 +9,14 @@ version = "0.1.0"
 actix = {version = "0.13.0"}
 actix-web = "4.3.1"
 actix-web-actors = "4.2.0"
+base64 = "0.21.0"
 bb8 = "0.8.0"
 bb8-mongodb = "0.2.0"
 db-helper = {path = "../db-helper"}
 envfile = "0.2.1"
+lib0 = "0.16.5"
 mongodb = "2.4.0"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0.95"
+y-sync = "0.3.0"
+yrs = "0.16.5"
