--- a/core-server/Cargo.toml
+++ b/core-server/Cargo.toml
@@ -12,6 +12,7 @@ actix-web-actors = "4.2.0"
 base64 = "0.21.0"
 bb8 = "0.8.0"
 bb8-mongodb = "0.2.0"
+bytes = "1.4.0"
 db-helper = {path = "../db-helper"}
 envfile = "0.2.1"
 lib0 = "0.16.5"
@@ -20,3 +21,8 @@ serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0.95"
 y-sync = "0.3.0"
 yrs = "0.16.5"
+
+[features]
+default = ["use_channel"]
+use_channel = []
+use_mutex = []
