--- a/core-server/Cargo.toml
+++ b/core-server/Cargo.toml
@@ -13,6 +13,7 @@ base64 = "0.21.0"
 bb8 = "0.8.0"
 bb8-mongodb = "0.2.0"
 bytes = "1.4.0"
+chashmap = "2.2.2"
 db-helper = {path = "../db-helper"}
 envfile = "0.2.1"
 lib0 = "0.16.5"
