--- a/core-server/Cargo.toml
+++ b/core-server/Cargo.toml
@@ -14,6 +14,7 @@ bb8 = "0.8.0"
 bb8-mongodb = "0.2.0"
 bytes = "1.4.0"
 chashmap = "2.2.2"
+crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
 db-helper = {path = "../db-helper"}
 envfile = "0.2.1"
 lib0 = "0.16.5"
