--- a/core-server/Cargo.toml
+++ b/core-server/Cargo.toml
@@ -14,13 +14,14 @@ bb8 = "0.8.0"
 bb8-mongodb = "0.2.0"
 bytes = "1.4.0"
 chashmap = "2.2.2"
-crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
+crossbeam = {version = "0.8.2", features = ["crossbeam-channel"]}
 db-helper = {path = "../db-helper"}
 envfile = "0.2.1"
 lib0 = "0.16.5"
 mongodb = "2.4.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0.95"
+tokio = {version = "1.27.0", features = ["time"]}
 y-sync = "0.3.0"
 yrs = "0.16.5"
 
